# dreamclaw

./: .gitignore  CITATION.cff  NOTICE  README.md  README_CN.md  analyze_telemetry.ipynb  community.db  pyproject.toml  run_12h_pilot.sh  run_fast_pilot.sh  test_community_service.py  test_critic_memory.py  test_emotion.py  test_graph.py  test_rumination.py
dclaw/: community_config.py  community_daemon.py  community_dashboard.py  community_db.py  community_online.py  community_providers.py  community_service.py  community_tui.py  config.py  critic.py  emotion.py  graph.py  main.py  memory.py  perception.py  rumination.py  state.py
dclaw/integration/: __init__.py  protocol.py  schemas.py  storage_interface.py
docs/: community_traffic_simulation.md
docs/paper/: arxiv_draft_en.md  arxiv_draft_en.tex  references.bib  workshop_short_en.md
scripts/: human_traffic_sim.py  real_community_ingest.py  seed_hn_sqlite.py  seed_wiki_talk_sqlite.py
