[project]
name = "dclaw"
version = "0.1.0"
description = "Emotion-Driven Social AI Agent with Persistent Memory & Quality Constraints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.35",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "ollama>=0.4.0",
    "rich>=13.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "streamlit>=1.41.0",
    "plotly>=5.24.0",
    "kaleido>=0.2.1",
    "mem0ai>=0.1.20", 
    "transformers",
    "torch",
    "browser-use",
    "neo4j",
    "chromadb",
    "sentence-transformers",
    "python-dotenv"
]

[tool.setuptools]
packages = ["dclaw"]
